- remove initial call to this._updateHistory(this.firstStep), this to prevent firefox from hiding the favicon (due to some issue with pushState).
- delay the triggering of the "step_shown" event until the step has finished animating.
- updated example : example_11_changing_options_after_initialization.html so that the transition animation is changed in runtime
October 22.

Version 3.0.4 released. Changes:

- fixed initialization code so that it does not set ui styles if disableUIStyles is set to false
- Fixed bug where the only the input fields on the last step were sent to the server

October 16.

Version 3.0.3 released. Changes:

- fixed update_steps function so that it does not set ui styles if disableUIStyles is set to false
- Changed the functionality of the plugin so that the form is submitted _exactly_ like any other form, when the form plugin is disabled.
- Added 2 more examples (20 and 21)

September 26.

Version 3.0.2 released. Changes:

- disableUIStyles option added. The option can be used to keep the plugin from adding jquery.ui styling to the form.
- updated the zip with version 1.8.5 of jqueryui which just contains core, widget and effects code. 

September 13.

Version 3.0.1 released. Changes:

 - added possibility to have the wizard ignore (not enable/disable) some input fields during step transition. This can be done by setting the class 'wizard-ignore' on the input fields.
 - Fixed issue with that the wizard posted the data to the server even when beforeSubmit, beforeSerialize or beforeSend returned false.


July 30.

Version 3.0.0 released. Changes:

 - updated examples
 - added a minified version of the plugin
 - updated documentation available at http://www.thecodemine.org
 - removed the alpha postfix


July 1.


Version 3.0.0 (alpha 1) released. Changes:
 - Now based on jQuery.ui and thus it needs to be available.
 - Removed dependency on jQuery history plugin
 - Added browser back button functionality by integration of the bbq plugin