@@ -163,17 +163,36 @@
     
     <script type="text/javascript">
 			$(function(){
+				$("#demoForm").formwizard({ 
+				 	formPluginEnabled: true,
+				 	validationEnabled: true,
+				 	focusFirstInput : true,
+				 	formOptions :{
+						success: function(data){$("#status").fadeTo(500,1,function(){ $(this).html("You are now registered!").fadeTo(5000, 0); })},
+						beforeSubmit: function(data){$("#data").html("data sent to the server: " + $.param(data));},
+						dataType: 'json',
+						resetForm: true
+				 	}	
+				 }
+				);
+
+				// function for appending step visualization
+				function addVisualization(id){
+					$("#step_visualization").append("<span class=\"visualization\" id=\"visualization_" + id + "\">" + id + "</span> ")
+				}
+				// initial call to addVisualization (for visualizing the first step)
+				addVisualization($("#demoForm").formwizard("state").firstStep);
 
 				// bind a callback to the step_shown event
 				$("#demoForm").bind("step_shown", function(event, data){
-					$("#step_visualization").html("");
+					$("#step_visualization").html(""); 
 					
 					if(data.isBackNavigation || !data.isFirstStep){
 						var direction = (data.isBackNavigation)?"back":"forward";
 						$("#step_visualization").append("<div>Moving "+ direction +"</div>");
 					}
 					$.each(data.activatedSteps, function(){
-						$("#step_visualization").append("<span class=\"visualization\" id=\"visualization_" + this + "\">" + this + "</span> ")
+						addVisualization(this)
 					});
 					/*
 						Available data:
@@ -191,19 +210,7 @@
 					*/
 					
 				})
-				
-				$("#demoForm").formwizard({ 
-				 	formPluginEnabled: true,
-				 	validationEnabled: true,
-				 	focusFirstInput : true,
-				 	formOptions :{
-						success: function(data){$("#status").fadeTo(500,1,function(){ $(this).html("You are now registered!").fadeTo(5000, 0); })},
-						beforeSubmit: function(data){$("#data").html("data sent to the server: " + $.param(data));},
-						dataType: 'json',
-						resetForm: true
-				 	}	
-				 }
-				);
+
   		});
     </script>
 	</body>
